# otus16hw7

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _reader_8cpp.html  _reader_8cpp__incl.map  _reader_8cpp__incl.md5  _reader_8cpp_source.html  _reader_8h.html  _reader_8h__dep__incl.map  _reader_8h__dep__incl.md5  _reader_8h__incl.map  _reader_8h__incl.md5  _reader_8h_source.html  _speaker_8cpp.html  _speaker_8cpp__incl.map  _speaker_8cpp__incl.md5  _speaker_8cpp_source.html  _speaker_8h.html  _speaker_8h__dep__incl.map  _speaker_8h__dep__incl.md5  _speaker_8h__incl.map  _speaker_8h__incl.md5  _speaker_8h_source.html  _writer_8cpp.html  _writer_8cpp__incl.map  _writer_8cpp__incl.md5  _writer_8cpp_source.html  _writer_8h.html  _writer_8h__dep__incl.map  _writer_8h__dep__incl.md5  _writer_8h__incl.map  _writer_8h__incl.md5  _writer_8h_source.html  annotated.html  annotated_dup.js  bulk_8cpp.html  bulk_8cpp__incl.map  (+133 more)
include/: CMakeLists.txt  Reader.h  Speaker.h  Writer.h  bulk.h  iPublisher.h  version.h.in
other/solver/: lib.cpp  lib.h
src/: CMakeLists.txt  Reader.cpp  Speaker.cpp  Writer.cpp  bulk.cpp  iPublisher.cpp  main.cpp  version.cpp
test/: CMakeLists.txt  input.txt  testall.cpp
